refactor(chat-service): unread counts read the durable cursor in one query; readat keys retired
UnreadCountService's multiGet + per-room COUNT split (with the epoch-2000
TTL-cliff fallback) collapses into a single grouped query against
room_members.last_read_at. ReadReceiptService write-throughs the cursor on
markRead/updateReadAt; the chatflow:readat Redis keys have no writer or
reader left. The positions hash (per-message receipts) is unchanged.

Constraint: GET /unread-counts response shape unchanged; non-member rooms now count 0 (intentional, plan-documented)
Rejected: Keep readat keys as write-behind cache | adds complexity for a fast PK-row UPDATE that doesn't need caching
Confidence: high
Scope-risk: moderate (read-path rewrite; behavior changes documented in the plan)

Co-Authored-By: Claude Fable 5 <noreply@anthropic.com>